--- a/lindera-filter/Cargo.toml
+++ b/lindera-filter/Cargo.toml
@@ -29,6 +29,7 @@ serde = { version="1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 unicode-blocks = "0.1.5"
 unicode-normalization = "0.1.22"
+unicode-segmentation = "1.10.1"
 yada = "0.5.0"
 
 lindera-core = { version = "0.23.0", path = "../lindera-core" }
