--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ lindera = { version = "0.43.1", path = "lindera" }
 lindera-cli = { version = "0.43.1", path = "lindera-cli" }
 
 anyhow = "1.0.98"
-bincode = "1.3.3"
+bincode = { version = "2.0.1", features = ["serde"] }
 byteorder = "1.5.0"
 clap = { version = "4.5.39", features = ["derive", "cargo"] }
 criterion = { version = "0.6.0", default-features = false, features = [
